# hands-on-ml

./: README.md  pyproject.toml
chapter-1/: example_1-1.ipynb
chapter-2/: example_2-1.ipynb
